--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "18.2.0",
-    "react-native": "0.71.2"
+    "react-native": "0.71.2",
+    "react-native-tailwindcss": "^1.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
